Translaton of 01 Getting Started Slides added

--- a/slides/UCSSR_Getting_Started.Rmd
+++ b/slides/UCSSR_Getting_Started.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Using Corpora in Social Science Research (UCSSR)"
-subtitle: 'Installation von _polmineR_ und _GermaParl_'
+subtitle: 'Installation of _polmineR_ and _GermaParl_'
 author: "Andreas Blaette"
-date: "15. Juli 2018"
+date: "15 Juli 2018"
 output:
   slidy_presentation:
     footer: Copyright (c) 2018, Andreas Blaette
@@ -12,47 +12,46 @@ editor_options:
   chunk_output_type: console
 ---
 
+## Installing polmineR
 
-## Installation von polmineR
+The official release is available via CRAN and can be installed using the `install.packages` function. Windows users can work with precompiled dependencies, so it should work 'out of the box'. Users of macOS please read the note at the end of this slide.
 
-Das offizielle Release ist verfügbar über CRAN und kann mit der Funktion `install.packages` installiert werden. Windows-Nutzerinnen und Nutzer können dabei mit vorkompilierten Abhänigigkeiten arbeiten, so dass es 'out of the box' funktionieren sollte. Nutzerinnen und Nutzer von macOS beachten bitte den Hinweis am Ende dieser Folie.
-
-```{r, eval = FALSE}
+````{r, eval = FALSE}
 install.packages("polmineR")
 ```
 
-Die aktuelle Entwicklungsversion von polmineR ist über GitHub verfügbar. Sie enthält neue Funktionen, eine verbesserte Dokumentation. Die Installation erfolgt mit `install_github` aus dem `devtools`-package.
+The current development version of polmineR is available via GitHub. It contains new functions and improved documentation. The installation is performed using `install_github` from the `devtools` package.
 
-```{r, eval = FALSE}
+````{r, eval = FALSE}
 install.packages("devtools")
-devtools::install_github("PolMine/polmineR", ref = "dev")
+devtools::install_github("PolMine/polmineR", ref ="dev")
 ```
 
-*Wichtig:* Nutzerinnen und Nutzer von macOS und Linux müssen vor der Installation von polmineR im Terminal für das RcppCWB-Paket die Bibliotheken pcre und GLib installieren. Bitte beachten Sie die Installationsanleitung zum polmineR-Paket, die Sie [hier](https://polmine.github.io/polmineR/index.html) finden.
+*Important:* Users of macOS and Linux must install the libraries _pcre_ and _GLib_ in the terminal for the RcppCWB package prior to installing polmineR. Please refer to the installation instructions for the polmineR package [here](https://polmine.github.io/polmineR/index.html).
 
 
-## Installation von GermaParl
+## Installing GermaParl
 
-Für das GermaParl-Paket wird ein neuer Installtionsmechanismus verwendet. Zuerst wird ein (relativ kleines) Paket installiert, das nur Test- bzw. Demo-Daten enthält. Die eigentlichen Daten des GermaParl-Korpus werden dann nachgeladen. Dies erfolgt über das 'drat'-Repositorium des PolMine-Projekts bei GitHub. Daher wird zuerst das 'drat'-package installiert.
+A new installation mechanism is used for the GermaParl package. First a (relatively small) package is installed, which only contains test or demonstration data. The actual data of the GermaParl body is then downloaded subsequently. This is done through the 'drat' repository of the PolMine project at GitHub. Therefore, the 'drat' package is installed first.
 
-```{r, eval = FALSE}
+````{r, eval = FALSE}
 install.packages("drat")
-drat::addRepo("polmine") # in diesem Fall: 'polmine' muss klein geschrieben werden!
+drat::addRepo("polmine") # in this case: 'polmine' must be written in lower case!
 
 install.packages("cwbtools")
 install.packages("GermaParl")
 ```
 
-Jetzt können wir das GermaParl-Paket laden und die eigentlichen Daten holen.
+Now we can load the GermaParl package and get the actual data.
 
-```{r, eval = FALSE}
+````{r, eval = FALSE}
 library("GermaParl")
 germaparl_download_corpus()
 ```
 
-Um zu testen, ob GermaParl verfügbar ist, laden wir polmineR und aktivieren das GermaParl-Korpus:
+To test if GermaParl is available, we load polmineR and activate the GermaParl corpus:
 
-```{r,eval = FALSE}
+````{r,eval = FALSE}
 library(polmineR)
 use("GermaParl")
 corpus()
