--- a/slides/UCSSR_Overview.Rmd
+++ b/slides/UCSSR_Overview.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Using Corpora in Social Science Research (UCSSR)"
-subtitle: 'Die Foliensätze im Überblick'
+subtitle: 'Slide decks overview'
 author: "Andreas Blaette"
-date: "15. Juli 2018"
+date: "15 Juli 2018"
 output:
   slidy_presentation:
     footer: Copyright (c) 2018, Andreas Blaette
@@ -13,11 +13,11 @@ editor_options:
 ---
 
 
-## Die Foliensätze der UCSSR-Serie
+## Slide decks of the UCSSR series
 
-  * [Installation von _polmineR_ und _GermaParl_](https://polmine.github.io/UCSSR/UCSSR_Getting_Started.html)
-  * [Nutzung von Konkordanzen in 'polmineR'](https://polmine.github.io/UCSSR/polmineR_KWIC.html)
-  * [Nutzung der CQP-Syntax mit polmineR](https://polmine.github.io/UCSSR/polmineR_CQP.html)
-  * [Analyse von Zeitreihen mit polmineR](https://polmine.github.io/UCSSR/polmineR_Zeitreihen.html)
-  * [Export tabellarischer Ergebnisse nach Excel](https://polmine.github.io/UCSSR/UCSSR_Interfacing_to_Excel.html)
-  * [Grundlagen der Sentiment-Analyse](https://polmine.github.io/UCSSR/UCSSR_Sentiment_Analysis.html)
+  * [Installating _polmineR_ and _GermaParl_](https://polmine.github.io/UCSSR/UCSSR_Getting_Started.html)
+  * [Use of concordances in 'polmineR'](https://polmine.github.io/UCSSR/polmineR_KWIC.html)
+  * [Using the CQP Syntax with polmineR](https://polmine.github.io/UCSSR/polmineR_CQP.html)
+  * [Time series analysis with polmineR](https://polmine.github.io/UCSSR/polmineR_Zeitreihen.html)
+  * [Export of tabular results to Excel](https://polmine.github.io/UCSSR/UCSSR_Interfacing_to_Excel.html)
+  * [Basics of Sentiment Analysis](https://polmine.github.io/UCSSR/UCSSR_Sentiment_Analysis.html)
