--- a/slides/UCSSR_Interfacing_to_Excel.Rmd
+++ b/slides/UCSSR_Interfacing_to_Excel.Rmd
@@ -13,18 +13,16 @@ editor_options:
 ---
 
 
-## Export von Tabellen
+## Table export
 
-Technische Grenzen bei der Arbeit mit Textdaten setzt R nicht unbedingt. Aber manche Schritte der Analyse können schneller und/oder flüssiger mit einem anderen Programm wie z.B. Excel gemacht werden. Excel kann für die Aufbereitung von Tabellen für Forschungsberichte und Publikationen vielleicht nicht den gleichen Grad der Reproduzierbarkeit wie R bieten, dafür aber mehr Komfort. Das polmineR-Paket sieht dementsprechend Funktionen für den Export nach Excel vor.
+R does not necessarily set technical limits when working with text data. But some steps of the analysis can be done faster and/or more fluently with another program like Excel. Excel may not offer the same level of reproducibility as R for the preparation of tables for research reports and publications, but it can offer more convenience. Accordingly, the polmineR package provides functions for exporting to Excel. 
 
-Dabei handelt es sich um die Methoden
+These methods are
 
-  * `store()` - für das Speichern tabellarischer Ergebnisse im Excel-Format, und
-  * `mail()`- um sich diese Tabellen komfortabel per Mail zuzuschicken.
-  
-Während die `mail()`-Methode schon früh Teil des polmineR-Pakets war, ist `store()` erst später hinzugekommen. Dabei wurde `mail()` grundlegend überarbeitet. Sie brauchen mindestens Version `r as.package_version("0.7.9.9004")`, damit die im folgenden Schritte funktionieren. Welche Version des Pakets Sie installiert haben, prüfen Sie durch den Aufruf von `packageVersion("polmineR")`.
-
-Sollten Sie eine ältere Version installiert haben, installieren Sie bitte die aktuelle Version von polmineR, die über GitHub verfügbar ist.
+  * `store()` - for saving tabular results in Excel format and
+  * `mail()`- for sending these tables conveniently by e-mail.
+ 
+While the `mail()` method was part of the polmineR package early on, `store()` was added later. In the process, `mail()` was fundamentally revised. You need at least version `r as.package_version("0.7.9.9004")` for the following steps to work. Check which version of the package you have installed by calling `packageVersion("polmineR")`. If you have an older version installed, please install the current version of polmineR, which is available via GitHub.
 
 ```{r install_recent_polmineR_version, eval = FALSE}
 devtools::install_github("PolMine/polmineR", ref = "dev")
@@ -32,25 +30,26 @@ devtools::install_github("PolMine/polmineR", ref = "dev")
 
 --
 
-## Tabellarische Ergebnisse lokal speichern (I)
+## Save tabular results locally (I)
 
-Das polmineR-Paket geht von zwei Standard-Szenarien aus: Man will entweder eine textstatistische Auswertung wie eine Häufigkeitszählung, eine Häufigkeitsverteilung, eine Kookkurrenz-Analyse und das Ergebnis einer Term-Extraktion als Excel-Dokuemt speichern. Oder man will mit einer Tabelle mit Keyword-in-Context-Anzeigen in Excel weiter arbeiten. In den folgenden Beispielen geben wir als Dateinamen eine Datei auf dem Desktop an. Natürlich können Sie das beliebig an Ihre Bedürfnisse anpassen.
+The polmineR package assumes two standard scenarios: Either a text-statistical evaluation like a frequency count, a frequency distribution, a cooccurrency analysis and the result of a term extraction is to be saved as an Excel document. Or you want to continue working with a table with keyword-in-context list in Excel.
+In the following examples, we specify a file name on the desktop. Of course you can adapt this to your needs. 
 
-In den Beispielen nutzen wir kleine Auswertungen auf Basis des GermaParl-Korpus. Nach dem Laden des polmineR-Pakets, aktivieren wir das Korpus.
+In the examples we use small evaluations based on the GermaParl body. After loading the polmineR package, we activate the corpus.
 
 ```{r, eval = FALSE}
 library(polmineR)
 use("GermaParl")
 ```
 
-Als erstes Beispiel sichern wir das Ergebnis einer Kookkurrenz-Analyse als Excel-Datei.
+As a first example we save the result of a cooccurrency analysis as an Excel file. 
 
 ```{r, eval = FALSE}
 result <- cooccurrences("GERMAPARL", query = "Islam")
 store(result, filename = "~/Desktop/cooccurrences.xlsx")
 ```
 
-Im zweiten Beispiel sichern wir eine Verteilungsanalyse.
+In the second example we save a distribution analysis.
 
 ```{r, eval = FALSE}
 result <- dispersion("GERMAPARL", query = "Islam", s_attribute = "year")
@@ -59,9 +58,9 @@ store(result, filename = "~/Desktop/dispersion.xlsx")
 
 --
 
-## Tabellarische Ergebnisse lokal speichern (II)
+## Save tabular results locally (II)
 
-Im dritten Beispiel nun die Ergebnisse einer Term-Extraktion.
+In a third example we now work with the results of a term extraction.
 
 ```{r, eval = FALSE}
 bt2008 <- partition("GERMAPARL", year = "2008", interjection = "FALSE", p_attribute = "word")
@@ -72,36 +71,36 @@ merkel_terms <- features(bt2008, merkel2008, included = TRUE)
 store(merkel_terms, filename = "~/Desktop/merkel_terms_2008.xlsx")
 ```
 
-Ein wichtiger Hinweis: Die Tabellen textstatistischer Auswertungen haben oft viele Zeilen. Um unnötigen Speicherverbrauch zu verhindern, wird die Zahl der gespeicherten bzw. exportierten Zeilen auf 250 begrenzt. Die zu speichernden Zeilen könne Sie über das Argument `rows` explizit angeben.
+An important note: The tables of text statistical evaluations often have many lines. To avoid unnecessary memory consumption, the number of saved or exported lines is limited to 250. You can explicitly specify the lines to be saved using the `rows` argument. 
 
 ```{r, eval = FALSE}
 store(merkel_terms, filename = "~/Desktop/merkel_terms_2008.xlsx", rows = 1:50)
 ```
 
-Das Speichern von Keyword-in-Context-Tabellen funktioniert analog zum vorher eingeführten Verfahren.
+Saving keyword-in-context tables works similar to the previously introduced procedure.
 
 ```{r, eval = FALSE}
 K <- kwic("GERMAPARL", "Flüchtlinge")
 store(K, filename = "~/Desktop/kwic.xlsx")
 ```
 
-Bei den KWIC-Ergebnissen werden als Standard alle Treffer exportiert. Bei Bedarf können Sie wie im vorangegangenen Beispiel eine Auswahl der exportierten Zeilen vornehmen.
+All hits are exported by default in the KWIC results. If required, you can select the exported rows as in the previous example.
 
 --
 
-## Export von KWIC-Ergebnissen per Mail 
+## Export of KWIC results via e-mail
 
-Die von polmineR für den Export aufbereiteten Excel-Dateien können Sie sich auch per Mail kommen lassen. Wichtig ist als Voraussetzung, dass Sie den Server für den Versand von Mails konfigurieren. Hier sehen Sie eine Beispiel-Konfiguration für Mitglieder der Universität Duisburg-Essen.
+You can also have the Excel files prepared by polmineR for export sent to you by e-mail. It is important that you configure the server for sending mails.
 
-Bitte beachten Sie, dass der Versand von Mails in diesem Fall ausschließlich dann funktioniet, wenn Sie per VPN in das Uni-Netz eingewählt sind.
+Here you can see an example configuration for members of the University of Duisburg-Essen. Please note that sending e-mails in this case only works if you are dialed into the university network via VPN.
 
 ```{r}
-options("polmineR.mail" = "max.mustermann@uni-due.de") # Hier muss natürlich eine echte Adresse stehen!
+options("polmineR.mail" = "max.mustermann@uni-due.de") # Fill in a real email address here!
 options("polmineR.smtp_server" = "mail.uni-due.de")
 options("polmineR.smtp_port" = "587")
 ```
 
-Wenn Sie die Mail-Konfiguration vorgenommen haben, können Sie die `mail()`-Methode genauso verwenden wie die `store()`-Methode.
+If you have configured the mail, you can use the `mail()` method exactly like the `store()` method.
 
 ```{r, eval = FALSE}
 mail(merkel_terms)
@@ -109,8 +108,4 @@ mail(K)
 mail(K, rows = 1:50)
 ```
 
-Mit etwas Geschick ist es möglich, die Mail-Konfiguration dauerhaft zu speichern, so dass diese beim Start von R automatisch verfügbar ist. Dafür müssen die oben genannten Adaptionen der R- bzw. polmineR-Optionen in den Daten .Renviron oder .Renviron.site vorgenommen werden -  vergleiche hierzu die Hilfe, die über `?Startup` aufgerufen werden kann. Vermutlich bleibt dies etwas fortgeschrittenen Nutzerinnen und Nutzern vorbehalten.
-
-
-
-
+With a little skill it is possible to save the mail configuration permanently, so that it is automatically available when starting R. For this purpose, the above-mentioned adaptations of the R and polmineR options must be made in the Renviron or .Renviron.site file - compare the manual which can be accessed via `?Startup`. Presumably this step is only for advanced R users.
